[package]
name = "psol-token"
version = "0.1.0"
description = "pSOL Token - Privacy token for Solana with encrypted balances"
edition = "2021"
license = "MIT"
repository = "https://github.com/grkhmz23/pSol"

[lib]
crate-type = ["cdylib", "lib"]
name = "psol_token"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
